src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>ApprovalType__c</fullName>
        <label>Zuora Approval Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Labs</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>CSO</fullName>
                </value>
                <value>
                    <fullName>Alliances</fullName>
                </value>
                <value>
                    <fullName>App TX</fullName>
                </value>
                <value>
                    <fullName>PCFS</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>Transformation</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Enablement</fullName>
                </value>
                <value>
                    <fullName>Engagement Director</fullName>
                </value>
                <value>
                    <fullName>APLE</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Royalty</fullName>
                </value>
                <value>
                    <fullName>SAAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Availability status of software</description>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Controlled</fullName>
                </value>
                <value>
                    <fullName>Pre-Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Ed Services</fullName>
                </value>
                <value>
                    <fullName>Partner Program</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overridden_T_E_Percentage__c</fullName>
        <label>Overridden T&amp;E Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSO_Custom_Package__c</fullName>
        <label>PSO - Custom/Package</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Zuora Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductServiceCategory__c</fullName>
        <label>Zuora Product Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Ed Services</fullName>
                </value>
                <value>
                    <fullName>Partner Program</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
                <value>
                    <fullName>Royalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_Category__c</fullName>
        <label>Product Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile - APLE</fullName>
                </value>
                <value>
                    <fullName>Agile - App Trans</fullName>
                </value>
                <value>
                    <fullName>Agile - CSD</fullName>
                </value>
                <value>
                    <fullName>Agile - Data Trans</fullName>
                </value>
                <value>
                    <fullName>Agile - DS</fullName>
                </value>
                <value>
                    <fullName>Agile - Labs</fullName>
                </value>
                <value>
                    <fullName>Agile - Tx</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>App - Edu</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Data - BCS</fullName>
                </value>
                <value>
                    <fullName>Data - Big Data Suite</fullName>
                </value>
                <value>
                    <fullName>Data - DS</fullName>
                </value>
                <value>
                    <fullName>Data - Edu</fullName>
                </value>
                <value>
                    <fullName>Data - GemFire</fullName>
                </value>
                <value>
                    <fullName>Data - GPDB</fullName>
                </value>
                <value>
                    <fullName>Data - HAWQ</fullName>
                </value>
                <value>
                    <fullName>Data - HD</fullName>
                </value>
                <value>
                    <fullName>Data - Resell</fullName>
                </value>
                <value>
                    <fullName>Data - Services</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>PaaS - App Trans</fullName>
                </value>
                <value>
                    <fullName>PaaS - BCS</fullName>
                </value>
                <value>
                    <fullName>PaaS - CC</fullName>
                </value>
                <value>
                    <fullName>PaaS - Edu</fullName>
                </value>
                <value>
                    <fullName>PaaS - Eng Director</fullName>
                </value>
                <value>
                    <fullName>PaaS - PAL</fullName>
                </value>
                <value>
                    <fullName>PaaS - PKS</fullName>
                </value>
                <value>
                    <fullName>PaaS - Resell</fullName>
                </value>
                <value>
                    <fullName>PaaS - Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Motion__c</fullName>
        <label>Selling Motion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>PaaS</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Product__c</fullName>
        <formula>CASE(text(ApprovalType__c), 
"Alliances", "CSO", 
"App TX", "CSO", 
"APLE", "CSO", 
"BCS", "CSO", 
"CSO", "CSO", 
"Data", "CSO", 
"Education &amp; Enablement", "CSO", 
"Engagement Director", "CSO", 
"Labs", "Lab", 
"Partner", "Product", 
"PCFS", "CSO", 
"Product", "Product", 
"Royalty", "Product", 
"SAAS", "Product", 
"Tracker", "Product", 

"None"
)</formula>
        <label>Services/Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_E_Percentage_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T&amp;E Percentage Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>zqu__SKU2__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>zqu__Category__c</columns>
        <columns>Category__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>ProductFamily__c</columns>
        <columns>Report_Category__c</columns>
        <columns>Selling_Motion__c</columns>
        <columns>ProductServiceCategory__c</columns>
        <columns>zqu__ZuoraId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Report_Category__c</columns>
        <columns>Selling_Motion__c</columns>
        <columns>zqu__ZuoraId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>zqu__ZuoraId__c</field>
            <operation>equals</operation>
        </filters>
        <label>SF Inactive Products</label>
    </listViews>
    <listViews>
        <fullName>Zuora_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>zqu__SKU2__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>zqu__Deleted__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Selling_Motion__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>ProductServiceCategory__c</columns>
        <columns>Report_Category__c</columns>
        <columns>Availability__c</columns>
        <columns>zqu__ZuoraId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__ZuoraId__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>zqu__Deleted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Zuora Products - Deleted</label>
    </listViews>
    <listViews>
        <fullName>Zuora_ProductsSvc</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>zqu__SKU2__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Selling_Motion__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>ProductServiceCategory__c</columns>
        <columns>Report_Category__c</columns>
        <columns>Availability__c</columns>
        <columns>zqu__ZuoraId__c</columns>
        <columns>zqu__Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>zqu__Deleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>zqu__ZuoraId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Zuora Products - not Deleted</label>
    </listViews>
</CustomObject>